--- a/index.html
+++ b/index.html
@@ -1027,7 +1027,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Fifteen<span>.</span></h3>
+            <h3>Dr. Ayurveda<span>.</span></h3>
             <p>
               A108 Adam Street <br>
               New York, NY 535022<br>
