--- a/index.html
+++ b/index.html
@@ -1009,98 +1009,108 @@
 		</section><!-- End Team Section -->
 
 		<!-- ======= Contact Section ======= -->
-		<section id="contact" class="contact">
-			<div class="container" data-aos="fade-up">
-
+		<section id="sectionContactUs" class="contact">
+			<div class="container">
 				<div class="section-title">
-					<h2>Contact</h2>
-					<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit
-						sint
-						consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.</p>
+					<h2><span>Contact</span> Us</h2>
+					<p></p>
 				</div>
 
-				<div class="row" data-aos="fade-up" data-aos-delay="100">
-					<div class="col-lg-6">
-						<div class="row">
-							<div class="col-md-12">
-								<div class="info-box">
-									<i class="bx bx-map"></i>
-									<h3>Our Address</h3>
-									<p>A108 Adam Street, New York, NY 535022</p>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="info-box mt-4">
-									<i class="bx bx-envelope"></i>
-									<h3>Email Us</h3>
-									<p>support@drayurvedicsexologist.com<br></p>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="info-box mt-4">
-									<i class="bx bx-phone-call"></i>
-									<h3>Call Us</h3>
-									<p>+919907856800<br></p>
-								</div>
-							</div>
+				<div class="map">
+					<iframe style="border:0; width: 100%; height: 350px;"
+						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.667034405136!2d88.34916541495926!3d22.554142385192314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0276e7479c7cad%3A0x2ce399323c653f92!2sPark%20St%2C%20Kolkata%2C%20West%20Bengal!5e0!3m2!1sen!2sin!4v1630790583222!5m2!1sen!2sin"
+						frameborder="0" allowfullscreen></iframe>
+				</div>
+			</div>
+
+			<div class="container mt-5">
+				<div class="info-wrap">
+					<div class="row">
+						<div class="col-lg-3 col-md-6 info">
+							<i class="icofont-google-map"></i>
+							<h4>Location:</h4>
+							<p>Durgapur<br>
+								West Bengal-700001<br></p>
 						</div>
 
+						<div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
+							<i class="icofont-clock-time icofont-rotate-90"></i>
+							<h4>Open Hours:</h4>
+							<p>Monday-Saturday:<br>10:00 AM - 09:00 PM</p>
+						</div>
+
+						<div class="col-lg-4 col-md-6 info mt-4 mt-lg-0">
+							<i class="icofont-envelope"></i>
+							<h4>
+								Email:
+							</h4>
+							<p>
+								<a href="mailto: support@drayurvedicsexologist.com">
+									support@drayurvedicsexologist.com
+								</a>
+							</p>
+						</div>
+
+						<div class="col-lg-2 col-md-6 info mt-4 mt-lg-0">
+							<i class="icofont-phone"></i>
+							<h4>Call:</h4>
+							<p><a href="tel: 9907856800">9907856800</a></p>
+						</div>
 					</div>
+				</div>
 
-					<div class="col-lg-6">
-						<form action="/" class="php-email-form">
-							<div class="form-row">
-								<div class="col form-group">
-									<input type="text" name="txtEnquirerName" class="form-control" id="txtEnquirerName"
-										placeholder="Your Name" data-rule="minlen:4"
-										data-msg="Please enter at least 4 chars" />
-									<div class="validate"></div>
-								</div>
-
-								<div class="col form-group">
-									<input type="email" class="form-control" name="txtEmail" id="txtEmail"
-										placeholder="Your Email" data-rule="email"
-										data-msg="Please enter a valid email" />
-									<div class="validate"></div>
-								</div>
-							</div>
-
-							<div class="form-row">
-								<div class="col form-group">
-									<input type="text" class="form-control" name="txtEnquirerMobile"
-										id="txtEnquirerMobile" placeholder="Mobile" data-rule="minlen:10"
-										data-msg="Please enter at least 10 chars of Mobile Number" />
-									<div class="validate"></div>
-								</div>
-
-								<div class="col form-group">
-									<input type="text" class="form-control" name="txtSubject" id="txtSubject"
-										placeholder="Subject" data-rule="minlen:4"
-										data-msg="Please enter at least 8 chars of subject" />
-									<div class="validate"></div>
-								</div>
-							</div>
-
-							<div class="form-group">
-								<textarea class="form-control" name="txtMessage" rows="5" data-rule="required"
-									id="txtMessage" data-msg="Please write something for us"
-									placeholder="Message"></textarea>
+				<div class="col-lg-12 mt-3" style="padding: 0 0 0 0;">
+					<form action="/" class="php-email-form">
+						<div class="form-row">
+							<div class="col form-group">
+								<input type="text" name="txtEnquirerName" class="form-control" id="txtEnquirerName"
+									placeholder="Your Name" data-rule="minlen:4"
+									data-msg="Please enter at least 4 chars" />
 								<div class="validate"></div>
 							</div>
-						</form>
 
-						<div id="divEmailAlerts" class="mb-3">
-							<div id="divLoading" class="loading">Loading</div>
-							<div id="divErrorMessage" class="error-message">There was an error sending your mail. Please
-								try again later!</div>
-							<div id="divMessageSent" class="sent-message">Your message has been sent. Thank you!</div>
+							<div class="col form-group">
+								<input type="email" class="form-control" name="txtEmail" id="txtEmail"
+									placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+								<div class="validate"></div>
+							</div>
 						</div>
 
-						<div class="text-center mt-3">
-							<button id="btnSubmitForm" class="get-started-btn">
-								Send Message
-							</button>
+						<div class="form-row">
+							<div class="col form-group">
+								<input type="text" class="form-control" name="txtEnquirerMobile" id="txtEnquirerMobile"
+									placeholder="Mobile" data-rule="minlen:10"
+									data-msg="Please enter at least 10 chars of Mobile Number" />
+								<div class="validate"></div>
+							</div>
+
+							<div class="col form-group">
+								<input type="text" class="form-control" name="txtSubject" id="txtSubject"
+									placeholder="Subject" data-rule="minlen:4"
+									data-msg="Please enter at least 8 chars of subject" />
+								<div class="validate"></div>
+							</div>
 						</div>
+
+						<div class="form-group">
+							<textarea class="form-control" name="txtMessage" rows="5" data-rule="required"
+								id="txtMessage" data-msg="Please write something for us"
+								placeholder="Message"></textarea>
+							<div class="validate"></div>
+						</div>
+					</form>
+
+					<div id="divEmailAlerts" class="mb-3">
+						<div id="divLoading" class="loading">Loading</div>
+						<div id="divErrorMessage" class="error-message">There was an error sending your mail. Please
+							try again later!</div>
+						<div id="divMessageSent" class="sent-message">Your message has been sent. Thank you!</div>
+					</div>
+
+					<div class="text-center mt-3">
+						<button id="btnSubmitForm" class="get-started-btn">
+							Send Message
+						</button>
 					</div>
 				</div>
 			</div>
