--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 						<ul>
 							<li class="active"><a href="#header">Home</a></li>
 							<li><a href="#about">About</a></li>
-							<!-- <li><a href="#services">Services</a></li> -->
-							<!-- <li><a href="#portfolio">Portfolio</a></li> -->
-							<li><a href="#team">Team</a></li>
-							<li><a href="blog.html">Blog</a></li>
+							<li><a href="#sectionWhyUs">Why Us?</a></li>
+							<li><a href="#sectionMajorProblem">Major Problems</a></li>
+							<li><a href="#sectionFAQ">FAQ</a></li>
+							<!-- <li><a href="blog.html">Blog</a></li> -->
 							<!-- <li class="drop-down"><a href="">Drop Down</a>
 								<ul>
 									<li><a href="#">Drop Down 1</a></li>
@@ -71,7 +71,7 @@
 									<li><a href="#">Drop Down 4</a></li>
 								</ul>
 							</li> -->
-							<li><a href="#contact">Contact</a></li>
+							<li><a href="#sectionContactUs">Contact</a></li>
 						</ul>
 					</nav><!-- .nav-menu -->
 
@@ -92,7 +92,7 @@
 						<div class="col-xl-5">
 							<h1>Save Your Relationship Before It’s Too Late</h1>
 							<h2>And the good thing is that we can help you with that!</h2>
-							<a href="#about" class="btn-get-started scrollto">Contact Us</a>
+							<a href="#sectionContactUs" class="btn-get-started scrollto">Contact Us</a>
 						</div>
 					</div>
 				</div>
@@ -146,11 +146,14 @@
 								It has been prevalent in India
 								from about 5000 years ago. In the Ayurvedic method of treatment, there is a holistic
 								traditional approach to healing.
+
+								<br>
+								<br>
+
 								There are four basics of which the human body is composed. They are the dosha, dhatu,
 								mala and agni. The treatment you
 								will get at an <strong>Ayurvedic Clinic</strong> is based on these basics.
 							</p>
-							<a href="#" class="about-btn"><span>About us</span> <i class="bx bx-chevron-right"></i></a>
 						</div>
 					</div>
 					<div class="col-xl-7 d-flex align-items-stretch">
@@ -199,7 +202,7 @@
 		</section><!-- End About Section -->
 
 		<!-- ======= Counts Section ======= -->
-		<section id="counts" class="counts">
+		<section id="sectionWhyUs" class="counts">
 			<div class="container" data-aos="fade-up">
 				<div class="section-title">
 					<h2>Why Us?</h2>
@@ -235,7 +238,7 @@
 		</section><!-- End Counts Section -->
 
 		<!-- ======= Tabs Section ======= -->
-		<section id="tabs" class="tabs">
+		<section id="sectionMajorProblem" class="tabs">
 			<div class="container" data-aos="fade-up">
 				<div class="section-title">
 					<h2>Major Problems</h2>
@@ -294,9 +297,6 @@
 										no erection at all when a man doesn’t
 										achieve erection for satisfactory intercourse.</li>
 								</ul>
-								<p>
-									<a href="#">Read More</a>
-								</p>
 							</div>
 							<div class="col-lg-6 order-1 order-lg-2 text-center" data-aos="fade-up"
 								data-aos-delay="200">
@@ -844,7 +844,7 @@
 		</section><!-- End Pricing Section -->
 
 		<!-- ======= Frequently Asked Questions Section ======= -->
-		<section id="faq" class="faq section-bg">
+		<section id="sectionFAQ" class="faq section-bg">
 			<div class="container" data-aos="fade-up">
 
 				<div class="section-title">
