--- a/index.html
+++ b/index.html
@@ -36,7 +36,18 @@
 </head>
 
 <body>
-
+	<section id="topbar" class="d-none d-lg-flex align-items-center fixed-top topbar-transparent">
+		<div class="container-fluid text-right">
+			<div class="row justify-content-center">
+				<div class="col-xl-10">
+					<i class="icofont-phone"></i>
+					<a href="tel: +919907856800">
+						+91 9907856800
+					</a>
+				</div>
+			</div>
+		</div>
+	</section>
 	<!-- ======= Header ======= -->
 	<header id="header" class="fixed-top">
 		<div class="container-fluid">
@@ -50,9 +61,10 @@
 						<ul>
 							<li class="active"><a href="#header">Home</a></li>
 							<li><a href="#about">About</a></li>
-							<li><a href="#sectionWhyUs">Why Us?</a></li>
+							<!-- <li><a href="#sectionWhyUs">Why Us?</a></li> -->
 							<li><a href="#sectionTeam">Team</a></li>
-							<li><a href="#sectionMajorProblem">Major Problems</a></li>
+							<!-- <li><a href="#sectionMajorProblem">Major Problems</a></li> -->
+							<li><a href="#sectionGallery">Gallery</a></li>
 							<li><a href="#sectionFAQ">FAQ</a></li>
 							<li><a href="#sectionTestimonials">Testimonials</a></li>
 							<!-- <li><a href="blog.html">Blog</a></li> -->
@@ -298,54 +310,58 @@
 								<h4 style="color: #3b2db9">Experience</h4>
 							</div>
 
-							<table class="table table-striped">
-								<thead>
-									<tr>
-										<th scope="col">From</th>
-										<th scope="col">To</th>
-										<th scope="col">Organization</th>
-										<th scope="col">Designation</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td scope="row">May 2016</td>
-										<td>Jan 2018</td>
-										<td>Art of Living Ayurveda Center, Dubai</td>
-										<td>Ayurveda Doctor</td>
-									</tr>
-									<tr>
-										<td scope="row">May 2015</td>
-										<td>May 2016</td>
-										<td>Ayurgreen Ayurveda Hospital, Kerala</td>
-										<td>Assistant Ayurveda Doctor</td>
-									</tr>
-									<tr>
-										<td scope="row">Nov 2014</td>
-										<td>May 2015</td>
-										<td>Medcorridor Hospital, Chennai</td>
-										<td>DMO</td>
-									</tr>
-									<tr>
-										<td scope="row">Aug 2014</td>
-										<td>Nov 2014</td>
-										<td>Dhanwantharalaya Ayurveda Hospital, Chennai</td>
-										<td>Assistant Physician</td>
-									</tr>
-									<tr>
-										<td scope="row">Apr 2013</td>
-										<td>Nov 2013</td>
-										<td>AVP Chikitsalayam, Coimbatore</td>
-										<td>Training Program</td>
-									</tr>
-								</tbody>
-							</table>
+							<div class="table-responsive">
+								<table class="table table-striped">
+									<thead>
+										<tr>
+											<th scope="col">From</th>
+											<th scope="col">To</th>
+											<th scope="col">Organization</th>
+											<th scope="col">Designation</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td scope="row">May 2016</td>
+											<td>Jan 2018</td>
+											<td>Art of Living Ayurveda Center, Dubai</td>
+											<td>Ayurveda Doctor</td>
+										</tr>
+										<tr>
+											<td scope="row">May 2015</td>
+											<td>May 2016</td>
+											<td>Ayurgreen Ayurveda Hospital, Kerala</td>
+											<td>Assistant Ayurveda Doctor</td>
+										</tr>
+										<tr>
+											<td scope="row">Nov 2014</td>
+											<td>May 2015</td>
+											<td>Medcorridor Hospital, Chennai</td>
+											<td>DMO</td>
+										</tr>
+										<tr>
+											<td scope="row">Aug 2014</td>
+											<td>Nov 2014</td>
+											<td>Dhanwantharalaya Ayurveda Hospital, Chennai</td>
+											<td>Assistant Physician</td>
+										</tr>
+										<tr>
+											<td scope="row">Apr 2013</td>
+											<td>Nov 2013</td>
+											<td>AVP Chikitsalayam, Coimbatore</td>
+											<td>Training Program</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
 
 							<div style="margin-bottom: 15px;">
-								<a href="https://res.cloudinary.com/suvishakha/image/upload/v1631654169/drayurveda/dr-murshid-practice-certificate_ahttvh.jpg" target="_" style="margin-left: 15px;">
+								<a href="https://res.cloudinary.com/suvishakha/image/upload/v1631654169/drayurveda/dr-murshid-practice-certificate_ahttvh.jpg"
+									target="_" style="margin-left: 15px;">
 									Practice Certificate
 								</a>
-								<a href="https://res.cloudinary.com/suvishakha/image/upload/v1631650275/drayurveda/dr-murshid-degree-certificate_pu769p.jpg" target="_" style="float: right;" style="padding-right: 15px;">
+								<a href="https://res.cloudinary.com/suvishakha/image/upload/v1631650275/drayurveda/dr-murshid-degree-certificate_pu769p.jpg"
+									target="_" style="float: right;" style="padding-right: 15px;">
 									BAMS Certificate
 								</a>
 							</div>
@@ -369,48 +385,52 @@
 								<h4 style="color: #3b2db9">Experience</h4>
 							</div>
 
-							<table class="table table-striped">
-								<thead>
-									<tr>
-										<th scope="col">Duration</th>
-										<th scope="col">Organization</th>
-										<th scope="col">Designation</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td scope="row">2 years</td>
-										<td>Sanjeevani Ayurveda Hospital, Manappally/Karunagapally</td>
-										<td>Medical Officer</td>
-									</tr>
-									<tr>
-										<td scope="row">6 months</td>
-										<td>Madhavam Panchakarma Centre, Hospital Harippadu</td>
-										<td>Ayurveda Doctor</td>
-									</tr>
-									<tr>
-										<td scope="row">2 years</td>
-										<td>K.M. Hospital, Vallikunnam</td>
-										<td>Ayurveda Doctor</td>
-									</tr>
-									<tr>
-										<td scope="row">2 years</td>
-										<td>Punarjani Ayurveda Hospital, Kayamkulam</td>
-										<td>Assistant Physician</td>
-									</tr>
-									<tr>
-										<td scope="row">2 years</td>
-										<td>Aniyans Hospital Oachira</td>
-										<td>Assistant Physician</td>
-									</tr>
-								</tbody>
-							</table>
+							<div class="table-responsive">
+								<table class="table table-striped">
+									<thead>
+										<tr>
+											<th scope="col">Duration</th>
+											<th scope="col">Organization</th>
+											<th scope="col">Designation</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td scope="row">2 years</td>
+											<td>Sanjeevani Ayurveda Hospital, Manappally/Karunagapally</td>
+											<td>Medical Officer</td>
+										</tr>
+										<tr>
+											<td scope="row">6 months</td>
+											<td>Madhavam Panchakarma Centre, Hospital Harippadu</td>
+											<td>Ayurveda Doctor</td>
+										</tr>
+										<tr>
+											<td scope="row">2 years</td>
+											<td>K.M. Hospital, Vallikunnam</td>
+											<td>Ayurveda Doctor</td>
+										</tr>
+										<tr>
+											<td scope="row">2 years</td>
+											<td>Punarjani Ayurveda Hospital, Kayamkulam</td>
+											<td>Assistant Physician</td>
+										</tr>
+										<tr>
+											<td scope="row">2 years</td>
+											<td>Aniyans Hospital Oachira</td>
+											<td>Assistant Physician</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
 
 							<div style="margin-bottom: 15px;">
-								<a href="https://res.cloudinary.com/suvishakha/image/upload/v1631654695/drayurveda/dr-greeshma-das-registration-certificate_l4ohbh.jpg" target="_" style="margin-left: 15px;">
+								<a href="https://res.cloudinary.com/suvishakha/image/upload/v1631654695/drayurveda/dr-greeshma-das-registration-certificate_l4ohbh.jpg"
+									target="_" style="margin-left: 15px;">
 									Practice Certificate
 								</a>
-								<a href="https://res.cloudinary.com/suvishakha/image/upload/v1631654690/drayurveda/dr-greeshma-das-degree-certificate_iznwp4.jpg" target="_" style="float: right;" style="padding-right: 15px;">
+								<a href="https://res.cloudinary.com/suvishakha/image/upload/v1631654690/drayurveda/dr-greeshma-das-degree-certificate_iznwp4.jpg"
+									target="_" style="float: right;" style="padding-right: 15px;">
 									BAMS Certificate
 								</a>
 							</div>
@@ -686,18 +706,18 @@
 			</div>
 		</section><!-- End Services Section -->
 
-		<!-- ======= Portfolio Section ======= 
-		<section id="portfolio" class="portfolio">
+		<!-- ======= Portfolio Section ======= -->
+		<section id="sectionGallery" class="portfolio">
 			<div class="container" data-aos="fade-up">
 
 				<div class="section-title">
-					<h2>Portfolio</h2>
-					<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit
+					<h2>Gallery</h2>
+					<!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit
 						sint
-						consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.</p>
+						consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.</p> -->
 				</div>
 
-				<div class="row" data-aos="fade-up" data-aos-delay="100">
+				<!-- <div class="row" data-aos="fade-up" data-aos-delay="100">
 					<div class="col-lg-12 d-flex justify-content-center">
 						<ul id="portfolio-flters">
 							<li data-filter="*" class="filter-active">All</li>
@@ -706,20 +726,19 @@
 							<li data-filter=".filter-web">Web</li>
 						</ul>
 					</div>
-				</div>
+				</div> -->
 
 				<div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1631651778/drayurveda/dr-murshid-3_me6lqq.jpg" class="img-fluid" alt="">
 							<div class="portfolio-info">
-								<h4>App 1</h4>
-								<p>App</p>
+								<!-- <h4>App 1</h4>
+								<p>App</p> -->
 								<div class="portfolio-links">
-									<a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery"
-										class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
-									<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1631651778/drayurveda/dr-murshid-3_me6lqq.jpg" data-gall="portfolioGallery"
+										class="venobox" title=""><i class="bx bx-plus"></i></a>
+									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
 								</div>
 							</div>
 						</div>
@@ -727,27 +746,27 @@
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1631651772/drayurveda/dr-murshid-2_cif4gi.jpg" class="img-fluid" alt="">
 							<div class="portfolio-info">
-								<h4>Web 3</h4>
-								<p>Web</p>
+								<!-- <h4>Web 3</h4>
+								<p>Web</p> -->
 								<div class="portfolio-links">
-									<a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery"
-										class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-									<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1631651772/drayurveda/dr-murshid-2_cif4gi.jpg" data-gall="portfolioGallery"
+										class="venobox" title=""><i class="bx bx-plus"></i></a>
+									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
 								</div>
 							</div>
 						</div>
 					</div>
 
-					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+					<!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+							<img style="max-height: fit-content;" src="https://res.cloudinary.com/suvishakha/image/upload/v1631651568/drayurveda/dr-greeshma-das-3_qlxo6u.jpg" class="img-fluid" alt="">
 							<div class="portfolio-info">
 								<h4>App 2</h4>
 								<p>App</p>
 								<div class="portfolio-links">
-									<a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery"
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1631651568/drayurveda/dr-greeshma-das-3_qlxo6u.jpg" data-gall="portfolioGallery"
 										class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
 									<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
 								</div>
@@ -757,35 +776,35 @@
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-card">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1631651565/drayurveda/dr-greeshma-das-2_k3koht.jpg" class="img-fluid" alt="">
 							<div class="portfolio-info">
 								<h4>Card 2</h4>
 								<p>Card</p>
 								<div class="portfolio-links">
-									<a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery"
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1631651565/drayurveda/dr-greeshma-das-2_k3koht.jpg" data-gall="portfolioGallery"
 										class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
 									<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+							<img src="https://res.cloudinary.com/suvishakha/image/upload/v1631651563/drayurveda/dr-greeshma-das-1_mwyozv.jpg" class="img-fluid" alt="">
 							<div class="portfolio-info">
-								<h4>Web 2</h4>
-								<p>Web</p>
+								<!-- <h4>Web 2</h4>
+								<p>Web</p> -->
 								<div class="portfolio-links">
-									<a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery"
-										class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
-									<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+									<a href="https://res.cloudinary.com/suvishakha/image/upload/v1631651563/drayurveda/dr-greeshma-das-1_mwyozv.jpg" data-gall="portfolioGallery"
+										class="venobox" title=""><i class="bx bx-plus"></i></a>
+									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
 								</div>
 							</div>
 						</div>
 					</div>
 
-					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+					<!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
 							<img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
 							<div class="portfolio-info">
@@ -843,10 +862,9 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 
 				</div>
-
 			</div>
 		</section><!-- End Portfolio Section -->
 
